force-app/main/default/objects/Account/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>Abbreviation or acronym for an account&apos;s name</description>
    <inlineHelpText>Does this organization have an abbreviated name or an acronym commonly used to refer to them?</inlineHelpText>
    <label>Common Name / Abbreviation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>