force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this ministry group currently active? (Holding semi-regular meetings, still have identified leaders, etc.)</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>