force-app/main/default/objects/Account/fields/Active_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Active_Affiliations__c</fullName>
    <description>Count of actively affiliated contacts with an organization.</description>
    <label>Active Affiliations</label>
    <summaryFilterItems>
        <field>npe5__Affiliation__c.npe5__Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </summaryFilterItems>
    <summaryForeignKey>npe5__Affiliation__c.npe5__Organization__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>