force-app/main/default/objects/Account/fields/Active_in_diocese__c.field-meta.xml
<CustomField>
    <fullName>Active_in_diocese__c</fullName>
    <defaultValue>true</defaultValue>
    <description>2020/09/20 MDM - For chancery (Justine), for reporting on which religious orders are active in the diocese.</description>
    <inlineHelpText>Active = Local members are active in the Archdiocese, or RCAV is actively partnering with their order.</inlineHelpText>
    <label>Active in diocese?</label>
    <type>Checkbox</type>
</CustomField>