force-app/main/default/objects/Account/fields/Congregation_Superior__c.field-meta.xml
<CustomField>
    <fullName>Congregation_Superior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Congregation Superior</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Congregation Superior)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>