force-app/main/default/objects/Account/fields/Date_Dissolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Dissolved__c</fullName>
    <label>Date Dissolved</label>
    <type>Date</type>
</CustomField>