force-app/main/default/objects/Account/fields/Date_of_Dedication__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Dedication__c</fullName>
    <label>Date of Dedication</label>
    <type>Date</type>
</CustomField>