force-app/main/default/objects/Account/fields/Diocese__c.field-meta.xml
<CustomField>
    <fullName>Diocese__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diocese</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This field must look up to a Diocese record.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Church</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Diocese</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parishes</relationshipLabel>
    <relationshipName>Diocesan_Parishes</relationshipName>
    <type>Lookup</type>
</CustomField>