force-app/main/default/objects/Account/fields/Entrustment__c.field-meta.xml
<CustomField>
    <fullName>Entrustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the religious order entrusted to manage this parish or mission.</description>
    <label>Entrustment</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entrustments</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>