force-app/main/default/objects/Account/fields/Entrustment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Entrustment_End_Date__c</fullName>
    <label>Entrustment End Date</label>
    <type>Date</type>
</CustomField>