force-app/main/default/objects/Account/fields/Entrustment_Is_Formal__c.field-meta.xml
<CustomField>
    <fullName>Entrustment_Is_Formal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Entrustment&apos;s status as a formal entrustment or simply that members of the religious community pastor this parish.</description>
    <inlineHelpText>Is there form Entrustment documentation? Or is this parish simply pastored my members of the religious community?</inlineHelpText>
    <label>Entrustment Formalized</label>
    <type>Checkbox</type>
</CustomField>