force-app/main/default/objects/Account/fields/Entrustment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Entrustment_Notes__c</fullName>
    <label>Entrustment Notes</label>
    <type>TextArea</type>
</CustomField>