force-app/main/default/objects/Account/fields/Entrustment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Entrustment_Start_Date__c</fullName>
    <label>Entrustment Start Date</label>
    <type>Date</type>
</CustomField>