force-app/main/default/objects/Account/fields/Related_Elementary_School__c.field-meta.xml
<CustomField>
    <fullName>Related_Elementary_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Elementary School</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>School</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parishes</relationshipLabel>
    <relationshipName>Parishes</relationshipName>
    <type>Lookup</type>
</CustomField>