force-app/main/default/objects/Account/fields/Religious_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Religious_Suffix__c</fullName>
    <description>Religious Suffix of all members of this religious congregation.</description>
    <inlineHelpText>Religious Suffix of members of the religious congregation.</inlineHelpText>
    <label>Religious Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>