force-app/main/default/objects/Account/fields/Type_Members__c.field-meta.xml
<CustomField>
    <fullName>Type_Members__c</fullName>
    <description>2020/09/20 MDM - For Chancery (Justine), to facilitate running reports on religious order that only have men or women in them. Note: Some religious orders have both men and women.</description>
    <inlineHelpText>Is this religious group primarily for men, women, couples, or families?</inlineHelpText>
    <label>Type of Members</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Couples</fullName>
            </value>
            <value>
                <fullName>Families</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>