force-app/main/default/objects/Account/fields/Type_of_Ministry__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Ministry__c</fullName>
    <label>Type of Ministry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parish-based ministry</fullName>
            </value>
            <value>
                <fullName>Regional or deanery ministry</fullName>
            </value>
            <value>
                <fullName>Archdiocesan ministry</fullName>
            </value>
            <value>
                <fullName>Campus ministry or chaplaincy</fullName>
            </value>
            <value>
                <fullName>Religious movement</fullName>
            </value>
            <value>
                <fullName>Non-profit organization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>