force-app/main/default/objects/Account/recordTypes/Church.recordType-meta.xml
<RecordType>
    <fullName>Church</fullName>
    <active>true</active>
    <description>Diocese, Parish, Mission, non-Catholic church, non-Christian religious congregation.</description>
    <label>Church</label>
</RecordType>