force-app/main/default/objects/Account/recordTypes/Religious.recordType-meta.xml
<RecordType>
    <fullName>Religious</fullName>
    <active>true</active>
    <description>A religious order or community or an establishment such as a monastery or retreat centre.</description>
    <label>Religious</label>
</RecordType>