force-app/main/default/objects/Account/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>true</active>
    <description>Educational institutions including Elementary, High School, K-12, College, University, Seminary</description>
    <label>School</label>
</RecordType>