force-app/main/default/objects/Account/listViews/Parishes.listView-meta.xml
<ListView>
    <fullName>Parishes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>npe01__One2OneContact__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Parish</value>
    </filters>
    <label>Parishes</label>
</ListView>